--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@ a:hover {
 
 .card-container {
   position: relative;
+  cursor: pointer;
 }
 
 .card-container p {
@@ -91,17 +92,22 @@ a:hover {
   font-size: 18px;
   letter-spacing: 0.1rem;
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.736);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.card-container:hover p {
+  opacity: 1;
 }
 
 .card-container svg {
   position: absolute;
   top: 10px;
   right: 10px;
-  cursor: pointer;
   transition: transform 0.5s;
 }
 
-.card-container svg:hover {
+.card-container:hover svg {
   transform: scale(1.5);
 }
 
