--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
 .App {
   text-align: center;
   color: #43a047;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 h1 {
@@ -30,6 +34,7 @@ a:hover {
   background: #43a047;
   padding: 20px;
   color: white;
+  text-align: center;
 }
 
 .navbar a {
@@ -41,8 +46,9 @@ a:hover {
 .gallery {
   display: grid;
   gap: 40px;
-  grid-template-columns: repeat(5, minmax(300px, 1fr));
-  grid-auto-rows: 300px;
+  grid-template-columns: repeat(5, 1fr);
+  width: 80vw;
+  grid-auto-rows: 250px;
   justify-items: center;
 }
 
@@ -131,4 +137,22 @@ a:hover {
 
 .error p {
   font-size: 20px;
+}
+
+@media (width < 1300px) {
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (width < 1080px) {
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (width < 600px) {
+  .gallery {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
